# make-first-firefox-profile-default

./: Cargo.toml  Makefile  README.md  make-first-firefox-profile-default.path  make-first-firefox-profile-default.service
.github/workflows/: test.yaml
src/: main.rs
